@@ -1,3 +1,9 @@
+2004-01-20  Julien MOUTTE  <julien@moutte.net>
+
+	* gst/switch/gstswitch.c: (gst_switch_request_new_pad),
+	(gst_switch_init): Fixed switch element : proxying link and setting
+	caps from src to sink on request.
+
 2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* sys/v4l/v4l-overlay_calls.c: (gst_v4l_set_overlay):
